@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-01T16:36:03Z",
+  "timestamp" : "2022-10-02T02:45:46Z",
   "count_outdated" : 805,
   "uniques_outdated" : 422,
-  "count" : 834,
-  "uniques" : 437,
+  "count" : 836,
+  "uniques" : 438,
   "clones" : [
     {
       "timestamp": "2022-09-18T00:00:00Z",
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-10-01T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-02T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
