@@ -1,5 +1,5 @@
 {
-  "count": 29,
+  "count": 31,
   "uniques": 2,
   "clones": [
     {
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2022-10-01T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-02T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
