@@ -1,3 +1,11 @@
+2022-10-02T02:45:46Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3167061441
+* notice: last 14d: unq all: 2 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 422 805 / 437 834
+* notice: next accum: outdated-unq outdated-all / unq all: 422 805 / 438 836
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-01 2022-10-02]
+
 2022-10-01T16:36:03Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3165324951
 * notice: last 14d: unq all: 2 29
